# pca

./: .gitignore  README.md  exemplo_1_notas.ipynb  pyproject.toml
